--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "scss": "sass --watch ./scss/custom.scss ./css/custom.css"
   },
   "dependencies": {
-    "bootstrap": "^5.3.2"
+    "@kurkle/color": "^0.3.2",
+    "bootstrap": "^5.3.2",
+    "luxon": "^3.4.4",
+    "chart.js": "^4.4.0"
   }
 }
