--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "@kurkle/color": "^0.3.2",
     "bootstrap": "^5.3.2",
-    "luxon": "^3.4.4",
-    "chart.js": "^4.4.0"
+    "bootstrap-icons": "^1.11.2",
+    "chart.js": "^4.4.0",
+    "luxon": "^3.4.4"
   }
 }
